--- a/web/STYLE/index.CSS
+++ b/web/STYLE/index.CSS
@@ -1,21 +1,22 @@
-header{
-background-color: rgb(27, 2, 255);
+#texto{
+ background-image: linear-gradient(top to bottom, rgba(2, 151, 250, 0.932)) ,url(https://st.depositphotos.com/1062624/4071/i/450/depositphotos_40716309-stock-photo-best-internet-concept-of-global.jpg);
 padding: 10px;
+background-size: 90%;
 padding-left: 100px;
 font-family: Verdana, Geneva, Tahoma, sans-serif;
 font-size: 50px;
 font-style: oblique;
 font-variant: small-caps;
 text-align: center;
-color: rgb(0, 0, 0);
+color: rgb(25, 0, 255);
 margin: 100px;
-border: ;
+border: 10px;
 }
 
 nav{
     height: 100vh;
     color: rgb(0, 0, 0);
-background-color: rgb(8, 250, 48);
+background-color: rgb(3, 27, 63);
 display: flex;
 flex-direction: column;
 justify-content: space-between;
@@ -23,7 +24,7 @@ justify-content: space-between;
 }
 .tarjeta{
 height: 20vh;
-background-color: rgb(215, 253, 0);
+background-color: rgb(12, 221, 211);
 
 border: 2px solid black;
 padding: 15px;
@@ -31,6 +32,8 @@ text-align: center;
 display: flexbox;
 }    
 img{
-
 height: 60%;
+
 }
+
+   
